changed the total calculation and justfy-content

--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -29,7 +29,7 @@
             width: 100%;
             display: flex;
             flex-flow: row nowrap; 
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             button {
                 width: 150px;
